--- a/notebooks/STS_evaluation.ipynb
+++ b/notebooks/STS_evaluation.ipynb
@@ -169,7 +169,7 @@
     "dcount = sentences.size\n",
     "print(f'{dcount:,} sentences (- {scount-dcount:,} duplicates)')\n",
     "\n",
-    "# Takes 25 secs for 20.5 millions sentences.\n",
+    "# Takes 30 secs for 20.5 millions sentences.\n",
     "# 19,131,302 sentences (- 1,379,630 duplicates)"
    ]
   },
@@ -187,27 +187,43 @@
    "outputs": [],
    "source": [
     "# All keywords in bold from BBS Ontology v0.3 on 17.09.2020.\n",
-    "keywords = {'pathogens', 'cardiac injury', 'cardiovascular disease', 'sars',\n",
-    "            'acute respiratory distress syndrome', 'gas exchange', 'inflammation',\n",
-    "            'sars-cov-2 infection', 'viral entry', 'glucose metabolism', 'golgi', 'human',\n",
-    "            'dry cough', 'mammals', 'cardiovascular injury', 'glycation', 'endoplasmic reticulum',\n",
-    "            'carbohydrates', 'innate immunity', 'igt', 'polysaccharide', 'hypertension',\n",
-    "            'thrombotic events', 'neutrophils', 'dc cells', 'obesity', 'congested cough',\n",
-    "            'influenzavirus', 'viral replication', 'septic shock', 'macrophages', 'cvd', 'lactate',\n",
-    "            'myalgia', 'chest pain', 'oxygen', 'mucociliary clearance', 'high blood sugar level',\n",
-    "            'respiratory failure', 'fever', 'systemic disorder', 'flu', 'influenzae',\n",
-    "            'hyperglycemia', 'impaired glucose tolerance', 'iron',\n",
-    "            'severe acute respiratory syndrome', 'immunity', 'host defense',\n",
-    "            'respiratory viral infection', 'multi-organs failure', 'blood clot',\n",
-    "            'viral infection', 'hypoxia', 'glucose homeostasis', 'vasoconstriction', 'covid-19',\n",
-    "            'sars-cov-2', 'fatigue', 'multiple organ failure', 'productive cough',\n",
-    "            'adaptive immunity', 'atp', 'bacteria', 'nk cells', 'coagulation', 'ards', 'diarrhea',\n",
-    "            'cytokine storm', 'dendritic cells', 'pneumonia', 'thrombosis', 'phagocytosis',\n",
-    "            'alveolar macrophages', 'glucose', 'clearance', 'epithelial cells', 'glucose uptake',\n",
-    "            'coronavirus', 'plasma membrane', 'lymphocytes', 'oxidative stress', 'glycans',\n",
-    "            'glycolysis', 'pulmonary embolism', 'glycosylation', 'viruses',\n",
-    "            'viral respiratory tract infection', 'diabetes', 'life-cycle', 'mammalia',\n",
-    "            'antimicrobials activity', 'ketones', 'immune system', 'pathogen'}\n",
+    "# keywords = {\n",
+    "#     'pathogens', 'cardiac injury', 'cardiovascular disease', 'sars',\n",
+    "#     'acute respiratory distress syndrome', 'gas exchange', 'inflammation',\n",
+    "#     'sars-cov-2 infection', 'viral entry', 'glucose metabolism', 'golgi', 'human',\n",
+    "#     'dry cough', 'mammals', 'cardiovascular injury', 'glycation', 'endoplasmic reticulum',\n",
+    "#     'carbohydrates', 'innate immunity', 'igt', 'polysaccharide', 'hypertension',\n",
+    "#     'thrombotic events', 'neutrophils', 'dc cells', 'obesity', 'congested cough',\n",
+    "#     'influenzavirus', 'viral replication', 'septic shock', 'macrophages', 'cvd', 'lactate',\n",
+    "#     'myalgia', 'chest pain', 'oxygen', 'mucociliary clearance', 'high blood sugar level',\n",
+    "#     'respiratory failure', 'fever', 'systemic disorder', 'flu', 'influenzae',\n",
+    "#     'hyperglycemia', 'impaired glucose tolerance', 'iron',\n",
+    "#     'severe acute respiratory syndrome', 'immunity', 'host defense',\n",
+    "#     'respiratory viral infection', 'multi-organs failure', 'blood clot',\n",
+    "#     'viral infection', 'hypoxia', 'glucose homeostasis', 'vasoconstriction', 'covid-19',\n",
+    "#     'sars-cov-2', 'fatigue', 'multiple organ failure', 'productive cough',\n",
+    "#     'adaptive immunity', 'atp', 'bacteria', 'nk cells', 'coagulation', 'ards', 'diarrhea',\n",
+    "#     'cytokine storm', 'dendritic cells', 'pneumonia', 'thrombosis', 'phagocytosis',\n",
+    "#     'alveolar macrophages', 'glucose', 'clearance', 'epithelial cells', 'glucose uptake',\n",
+    "#     'coronavirus', 'plasma membrane', 'lymphocytes', 'oxidative stress', 'glycans',\n",
+    "#     'glycolysis', 'pulmonary embolism', 'glycosylation', 'viruses',\n",
+    "#     'viral respiratory tract infection', 'diabetes', 'life-cycle', 'mammalia',\n",
+    "#     'antimicrobials activity', 'ketones', 'immune system', 'pathogen'\n",
+    "# }\n",
+    "\n",
+    "# Pierre-Alexandre's keywords for glucose AND (covid-19 OR sars-cov-2).\n",
+    "keywords = {\n",
+    "    # COVID-19\n",
+    "    'covid-19', 'covid', 'cytokine', 'cytokines', 'hypercytokinemia',\n",
+    "    # SARS-CoV-2\n",
+    "    'sars-cov-2', '2019-ncov', 'hcov-19', 'coronavirus',\n",
+    "    # Glucose\n",
+    "    'glucose', 'd-glucose', 'l-glucose', 'sugar', 'sugars',\n",
+    "    'carbohydrate', 'carbohydrates', 'monosaccharide', 'monosaccharides',\n",
+    "    'polysaccharide', 'polysaccharides', 'glycan', 'glycans', 'glucan', 'glucans', 'glycogen',\n",
+    "    'glycation', 'glycogenolysis', 'glycosylation', 'glycolysis', 'glycosidic',\n",
+    "    'hyperglycemia', 'diabetes', 'diabetic', 'diabetics', 'insulin', 'obesity', 'obese',\n",
+    "}\n",
     "\n",
     "def ok(text: str) -> bool:\n",
     "    conditions = (\n",
@@ -229,8 +245,8 @@
     "fcount = filtered.size\n",
     "print(f'{fcount:,} sentences ({scount-fcount:,} not selected)')\n",
     "\n",
-    "# Takes 2 mins 45 for 20.5 millions sentences and 100 keywords.\n",
-    "# 1,264,496 sentences (19,246,436 not selected)"
+    "# Takes 2 mins 45 for 20.5 millions sentences and 40 or 100 keywords.\n",
+    "# 631,854 sentences (19,879,078 not selected)"
    ]
   },
   {
@@ -277,7 +293,7 @@
    "source": [
     "def load_embeddings(model: str, sentence_ids: np.ndarray) -> torch.Tensor:\n",
     "    path = Path(EMBEDDINGS)\n",
-    "    embeddings = H5.load(path, model, batch_size=10000, indices=sentence_ids)\n",
+    "    embeddings = H5.load(path, model, indices=sentence_ids)\n",
     "    tensor = torch.from_numpy(embeddings)\n",
     "    norm = torch.norm(tensor, dim=1, keepdim=True)\n",
     "    norm[norm == 0] = 1\n",
@@ -289,8 +305,8 @@
     "ecount = embeddings.size()[0]\n",
     "print(f'{ecount:,} embeddings (same as selected sentences? {ecount == fcount})')\n",
     "\n",
-    "# Takes 23 mins 30 for 1.3 million embeddings to select from 20.5 millions in total.\n",
-    "# 1,264,496 embeddings (same as selected sentences? True)"
+    "# Takes 25 secs for 630 thousands embeddings to select from 20.5 millions in total.\n",
+    "# 631,854 embeddings (same as selected sentences? True)"
    ]
   },
   {
@@ -307,7 +323,8 @@
    "outputs": [],
    "source": [
     "nlp = spacy.load('en_core_sci_lg')\n",
-    "# Takes 25 secs."
+    "\n",
+    "# Takes 15 secs."
    ]
   },
   {
@@ -358,7 +375,7 @@
     "        'vectors_similarity', 'words_similarity']\n",
     "pairs = pd.DataFrame(rows, columns=cols).sort_values('vectors_similarity', ascending=False)\n",
     "\n",
-    "# Takes 10 secs for 100 pairs amongst 1.3 million selected embeddings / sentences."
+    "# Takes 10 secs for 100 pairs amongst 630 thousands selected embeddings / sentences."
    ]
   },
   {
@@ -367,7 +384,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pairs.head()"
+    "pairs.head(3)"
    ]
   },
   {
@@ -414,6 +431,40 @@
     "    print(f'<wrote> {filename}')\n",
     "\n",
     "write_results_txt(pairs, N, '.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Experiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pairs_exp_1 = pairs[(pairs.words_similarity <= 0.9) & (pairs.vectors_similarity <= 0.9)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_exp_1 = len(pairs_exp_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_results_txt(pairs_exp_1, n_exp_1, '.')"
    ]
   },
   {
