Change from type annotations to docstrings

--- a/notebooks/STS_evaluation.ipynb
+++ b/notebooks/STS_evaluation.ipynb
@@ -85,7 +85,6 @@
    "source": [
     "import re\n",
     "from pathlib import Path\n",
-    "from typing import Tuple\n",
     "from datetime import datetime"
    ]
   },
@@ -225,7 +224,19 @@
     "    'hyperglycemia', 'diabetes', 'diabetic', 'diabetics', 'insulin', 'obesity', 'obese',\n",
     "}\n",
     "\n",
-    "def ok(text: str) -> bool:\n",
+    "def ok(text):\n",
+    "    \"\"\"Check if a sentence should be kept according to its content.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    text : str\n",
+    "        The sentence content.\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    bool\n",
+    "        True if the sentence should be kept. False otherwise.\n",
+    "    \"\"\"\n",
     "    conditions = (\n",
     "        # Keep sentences of length between 100 to 300 characters.\n",
     "        # These sentences are long enough to be meaningful.\n",
@@ -291,7 +302,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_embeddings(model: str, sentence_ids: np.ndarray) -> torch.Tensor:\n",
+    "def load_embeddings(model, sentence_ids):\n",
+    "    \"\"\"Load pre-computed embeddings of sentences for a given model.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    model : str\n",
+    "        The sentence embedding model.\n",
+    "    sentence_ids : np.ndarray\n",
+    "        The identifiers of the sentences.\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    torch.Tensor\n",
+    "        The pre-computed embeddings of the specified sentences.\n",
+    "    \"\"\"\n",
     "    path = Path(EMBEDDINGS)\n",
     "    embeddings = H5.load(path, model, indices=sentence_ids)\n",
     "    tensor = torch.from_numpy(embeddings)\n",
@@ -335,7 +360,27 @@
    },
    "outputs": [],
    "source": [
-    "def pair(mapping: int, embeddings: torch.Tensor, sentences: pd.DataFrame) -> Tuple[int, str, float]:\n",
+    "def pair(mapping, embeddings, sentences):\n",
+    "    \"\"\"Match a sentence with a given one in a meaningful way.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    mapping : int\n",
+    "        The index in `sentences` of the sentence to match with another one.\n",
+    "    embeddings : torch.Tensor\n",
+    "        The pre-computed embeddings of the sentences in `sentences`.\n",
+    "    sentences : pd.DataFrame\n",
+    "        The sentences in which to match the sentence specified by `mapping`.\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    sentence_id : int\n",
+    "        The identifier of the matched sentence.\n",
+    "    sentence_text : str\n",
+    "        The content of the matched sentence.\n",
+    "    vectors_similarity : float\n",
+    "        The cosine similarity between the specified sentence and the matched one.\n",
+    "    \"\"\"\n",
     "    embedding = embeddings[mapping]\n",
     "    similarities = torch.nn.functional.linear(embedding, embeddings)\n",
     "    # The top element is the sampled sentence.\n",
@@ -346,7 +391,23 @@
     "    row = sentences.loc[sentences.mapping == idx]\n",
     "    return row.index.item(), row.text.item(), sim\n",
     "\n",
-    "def words_similarity(text1: str, text2: str, nlp: spacy.lang.en.English) -> float:\n",
+    "def words_similarity(text1, text2, nlp):\n",
+    "    \"\"\"Compute a word-based similarity between sentences.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    text1 : str\n",
+    "        The content of the first sentence.\n",
+    "    text2 : str\n",
+    "        The content of the second sentence.\n",
+    "    nlp : spacy.lang.en.English\n",
+    "        The spaCy model to use for tokenization and lemmatization.\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    float:\n",
+    "        The word-based similarity between the two sentences.\n",
+    "    \"\"\"\n",
     "    doc1 = nlp(text1)\n",
     "    doc2 = nlp(text2)\n",
     "    set1 = {x.lemma_ for x in doc1 if not x.is_punct}\n",
@@ -393,7 +454,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def format_results(pairs: pd.DataFrame) -> str:\n",
+    "def format_results(pairs):\n",
+    "    \"\"\"Format sentence pairs in a human-readable format.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    pairs : pd.DataFrame\n",
+    "        The sentence pairs.\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    str\n",
+    "        The sentences pairs formatted in a human-readable format.\n",
+    "    \"\"\"\n",
     "    def _(i, x):\n",
     "        return (\n",
     "            f'pair: {i}  id_1: {x.sentence_id_1}  id_2: {x.sentence_id_2}  '\n",
@@ -421,7 +494,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_results_txt(pairs: pd.DataFrame, n: int, directory: str) -> None:\n",
+    "def write_results_txt(pairs, n, directory):\n",
+    "    \"\"\"Write sentence pairs to disk in a human-readable format.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    pairs : pd.DataFrame\n",
+    "        The sentence pairs.\n",
+    "    n : int\n",
+    "        The number of sentence pairs.\n",
+    "    directory : str\n",
+    "        The directory where to write the sentence pairs.\n",
+    "    \"\"\"\n",
     "    time =  datetime.now().strftime(\"%Y-%m-%d_%Hh%M\")\n",
     "    filename = f'pairs_n{n}_{time}.txt'\n",
     "    path = Path(directory, filename)\n",
