--- a/notebooks/demo_attribute_extraction.ipynb
+++ b/notebooks/demo_attribute_extraction.ipynb
@@ -1,6 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!---\n",
+    "BBSearch is a text mining toolbox focused on scientific use cases.\n",
+    "\n",
+    "Copyright (C) 2020  Blue Brain Project, EPFL.\n",
+    "\n",
+    "This program is free software: you can redistribute it and/or modify\n",
+    "it under the terms of the GNU General Public License as published by\n",
+    "the Free Software Foundation, either version 3 of the License, or\n",
+    "(at your option) any later version.\n",
+    "\n",
+    "This program is distributed in the hope that it will be useful,\n",
+    "but WITHOUT ANY WARRANTY; without even the implied warranty of\n",
+    "MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\n",
+    "GNU General Public License for more details.\n",
+    "\n",
+    "You should have received a copy of the GNU Lesser General Public License\n",
+    "along with this program. If not, see <https://www.gnu.org/licenses/>.\n",
+    "-->\n",
+    "\n",
+    "# Attribute Extraction Demo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
