Replace in all occurances of git grep
PyCharm refactor is not that powerful
[run travis]

--- a/notebooks/STS_evaluation.ipynb
+++ b/notebooks/STS_evaluation.ipynb
@@ -119,7 +119,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from tqdm.notebook import tqdm\n",
-    "from bbsearch.utils import H5"
+    "from bluesearch.utils import H5"
    ]
   },
   {
