--- a/notebooks/demo_attribute_extraction.ipynb
+++ b/notebooks/demo_attribute_extraction.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "import spacy\n",
     "\n",
-    "from bbsearch.mining import AttributeExtractor, AttributeAnnotationTab, TextCollectionWidget"
+    "from bluesearch.mining import AttributeExtractor, AttributeAnnotationTab, TextCollectionWidget"
    ]
   },
   {
