--- a/notebooks/NER_Evaluation.ipynb
+++ b/notebooks/NER_Evaluation.ipynb
@@ -55,7 +55,7 @@
     "import spacy\n",
     "\n",
     "\n",
-    "from bbsearch.mining.eval import (annotations2df, spacy2df, unique_etypes, plot_ner_confusion_matrix, \n",
+    "from bluesearch.mining.eval import (annotations2df, spacy2df, unique_etypes, plot_ner_confusion_matrix, \n",
     "                                  ner_report, ner_errors, remove_punctuation)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
