Remove the use of 'inplace' for Pandas

--- a/notebooks/NER_Evaluation.ipynb
+++ b/notebooks/NER_Evaluation.ipynb
@@ -149,14 +149,13 @@
     "    model_df = []\n",
     "\n",
     "    for source, df_ in df.groupby('source'):\n",
-    "        df_ = df_.sort_values(by='id', inplace=False, ignore_index=True)\n",
+    "        df_ = df_.sort_values(by='id', ignore_index=True)\n",
     "        df_sentence = spacy2df(spacy_model=ner_model, ground_truth_tokenization=df_['text'].to_list())\n",
     "        df_sentence['id'] = df_['id'].values\n",
     "        df_sentence['source'] = source\n",
     "        model_df.append(df_sentence)\n",
     "\n",
-    "    model_df = pd.concat(model_df, ignore_index=True)\n",
-    "    model_df.rename(columns={'class': f'class_{ner_model_name}'}, inplace=True)\n",
+    "    model_df = pd.concat(model_df, ignore_index=True).rename(columns={'class': f'class_{ner_model_name}'})\n",
     "    \n",
     "    df = df.merge(model_df, \n",
     "         on=['source', 'id', 'text'], \n",
