--- a/notebooks/demo_embedding_api.ipynb
+++ b/notebooks/demo_embedding_api.ipynb
@@ -49,7 +49,6 @@
     "The current implementation handles one sentence per request. To compute embeddings for multiple sentences multiple queries need to be made.\n",
     "\n",
     "The models currently available are:\n",
-    "- \"USE\" (Universal Sentence Embedding)\n",
     "- \"SBERT\" (Sentence BERT)\n",
     "- \"SBIOBERT\" (Sentence BioBERT)\n",
     "- \"BSV\" (BioSentVec)\n",
@@ -162,7 +161,7 @@
    "outputs": [],
    "source": [
     "payload = {\n",
-    "    \"model\": \"USE\",\n",
+    "    \"model\": \"BSV\",\n",
     "    \"text\": \"This is a sample text.\"\n",
     "}"
    ]
