mv matplotlib to extras_require

--- a/notebooks/NER_Evaluation.ipynb
+++ b/notebooks/NER_Evaluation.ipynb
@@ -55,11 +55,78 @@
     "import spacy\n",
     "\n",
     "\n",
-    "from bluesearch.mining.eval import (annotations2df, spacy2df, unique_etypes, plot_ner_confusion_matrix, \n",
+    "from bluesearch.mining.eval import (annotations2df, spacy2df, unique_etypes, \n",
     "                                  ner_report, ner_errors, remove_punctuation)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_ner_confusion_matrix(\n",
+    "    iob_true, iob_pred, normalize=None, mode=\"entity\", cmap=\"viridis\", ax=None\n",
+    "):\n",
+    "    \"\"\"Plot Confusion Matrix for NER evaluation.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    iob_true : pd.Series[str]\n",
+    "         Ground truth (correct) IOB annotations.\n",
+    "    iob_pred : pd.Series[str]\n",
+    "        Predicted IOB annotations.\n",
+    "    normalize : {'true', 'pred', 'all'}, default=None\n",
+    "        Normalizes confusion matrix over the true (rows), predicted (columns)\n",
+    "        conditions or all the population. If None, the confusion matrix will\n",
+    "        not be normalized.\n",
+    "    mode : str, optional\n",
+    "        Evaluation mode. One of 'entity', 'token': notice that an 'entity'\n",
+    "        can span several tokens.\n",
+    "    cmap : str or matplotlib Colormap, default='viridis'\n",
+    "        Colormap recognized by matplotlib.\n",
+    "    ax : matplotlib Axes, default=None\n",
+    "        Axes object to plot on. If `None`, a new figure and axes is\n",
+    "        created and returned.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    ax : matplotlib Axes\n",
+    "        Axes object where the matrix was plotted.\n",
+    "    \"\"\"\n",
+    "    cm = ner_confusion_matrix(iob_true, iob_pred, normalize=normalize, mode=mode)\n",
+    "\n",
+    "    x = cm.values\n",
+    "    e_types_true = cm.index\n",
+    "    e_types_pred = cm.columns\n",
+    "\n",
+    "    if ax is None:\n",
+    "        f, ax = plt.subplots(figsize=(len(e_types_pred) * 0.6, len(e_types_true) * 0.6))\n",
+    "\n",
+    "    max_val = 1 if (normalize is not None) else x[:-1, :-1].max()\n",
+    "    ax.imshow(-np.minimum(x, max_val), cmap=cmap, vmin=-max_val, vmax=0)\n",
+    "\n",
+    "    for i in range(len(x)):\n",
+    "        for j in range(len(x.T)):\n",
+    "            c = \"k\" if x[i, j] < max_val / 2 else \"w\"\n",
+    "            text = (\n",
+    "                f\"{int(round(100 * x[i, j])):d}%\"\n",
+    "                if (normalize is not None)\n",
+    "                else f\"{x[i, j]:,d}\"\n",
+    "            )\n",
+    "            ax.text(j, i, text, ha=\"center\", va=\"center\", color=c)\n",
+    "\n",
+    "    ax.set_xticks(np.arange(len(e_types_pred)))\n",
+    "    ax.set_yticks(np.arange(len(e_types_true)))\n",
+    "    ax.set_xticklabels(list(e_types_pred), rotation=90)\n",
+    "    ax.set_yticklabels(e_types_true)\n",
+    "    ax.set_xlabel(\"Predicted\")\n",
+    "    ax.set_ylabel(\"True\")\n",
+    "\n",
+    "    return ax"
    ]
   },
   {
