Change NER model in demo_attribute_extraction.ipynb

--- a/notebooks/demo_attribute_extraction.ipynb
+++ b/notebooks/demo_attribute_extraction.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "entity_model = spacy.load(\"en_ner_craft_md\")"
+    "entity_model = spacy.load(\"data_and_models/models/ner_er/model-chemical\")"
    ]
   },
   {
