--- a/notebooks/NER_Evaluation.ipynb
+++ b/notebooks/NER_Evaluation.ipynb
@@ -34,10 +34,10 @@
    },
    "outputs": [],
    "source": [
-    "!pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_ner_craft_md-0.2.5.tar.gz \\\n",
-    "    https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_ner_jnlpba_md-0.2.5.tar.gz \\\n",
-    "    https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_ner_bc5cdr_md-0.2.5.tar.gz \\\n",
-    "    https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_ner_bionlp13cg_md-0.2.5.tar.gz"
+    "!pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_ner_craft_md-0.4.0.tar.gz \\\n",
+    "    https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_ner_jnlpba_md-0.4.0.tar.gz \\\n",
+    "    https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_ner_bc5cdr_md-0.4.0.tar.gz \\\n",
+    "    https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_ner_bionlp13cg_md-0.4.0.tar.gz"
    ]
   },
   {
@@ -55,8 +55,15 @@
     "import spacy\n",
     "\n",
     "\n",
-    "from bluesearch.mining.eval import (annotations2df, spacy2df, unique_etypes, \n",
-    "                                  ner_report, ner_errors, remove_punctuation)\n",
+    "from bluesearch.mining.eval import (\n",
+    "    annotations2df,\n",
+    "    ner_confusion_matrix,\n",
+    "    ner_errors,\n",
+    "    ner_report,\n",
+    "    remove_punctuation,\n",
+    "    spacy2df,\n",
+    "    unique_etypes,\n",
+    ")\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
