update create indices notebook

--- a/src/bluesearch/k8s/create_indices.ipynb
+++ b/src/bluesearch/k8s/create_indices.ipynb
@@ -163,9 +163,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1937749/3760375478.py:1: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "  client.indices.create(\n",
+      "/home/reissant/miniforge3/envs/py10/lib/python3.10/site-packages/urllib3/connectionpool.py:1013: InsecureRequestWarning: Unverified HTTPS request is being made to host 'ml-elasticsearch.kcp.bbp.epfl.ch'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'paragraphs'})"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "client.indices.create(\n",
     "    index=\"paragraphs\",\n",
@@ -180,7 +201,7 @@
     "                \"paragraph_id\": {\"type\": \"short\"},\n",
     "                \"text\": {\"type\": \"text\"},\n",
     "                \"is_bad\": {\"type\": \"boolean\"},\n",
-    "                \"emb\": {\n",
+    "                \"embedding\": {\n",
     "                    \"type\": \"dense_vector\",\n",
     "                    \"dims\": 384,\n",
     "                    \"index\": True,\n",
@@ -201,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -215,10 +236,10 @@
     {
      "data": {
       "text/plain": [
-       "['arxiv_dense']"
+       "['articles', 'arxiv_dense', 'paragraphs']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
