--- a/src/bluesearch/k8s/create_indices.ipynb
+++ b/src/bluesearch/k8s/create_indices.ipynb
@@ -64,7 +64,7 @@
    ],
    "source": [
     "client = Elasticsearch(\n",
-    "    \"https://ml-elasticsearch.kcp.bbp.epfl.ch:443\",\n",
+    "    config('ES_URL'),\n",
     "    basic_auth=(\"elastic\", config('ES_PASS')),\n",
     "    verify_certs=False,\n",
     ")"
