--- a/src/bluesearch/k8s/create_indices.ipynb
+++ b/src/bluesearch/k8s/create_indices.ipynb
@@ -143,6 +143,7 @@
     "                \"doi\": {\"type\": \"keyword\"},\n",
     "                \"pmc_id\": {\"type\": \"keyword\"},\n",
     "                \"pubmed_id\": {\"type\": \"keyword\"},\n",
+    "                \"arxiv_id\": {\"type\": \"keyword\"},\n",
     "                \"title\": {\"type\": \"text\"},\n",
     "                \"authors\": {\"type\": \"text\"},\n",
     "                \"abstract\": {\"type\": \"text\"},\n",
