--- a/src/bluesearch/k8s/create_indices.ipynb
+++ b/src/bluesearch/k8s/create_indices.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
    ],
    "source": [
     "client = Elasticsearch(\n",
-    "    \"https://ml-elasticsearch.kcp.bbp.epfl.ch:443\",\n",
+    "    config('ES_URL'),\n",
     "    basic_auth=(\"elastic\", config('ES_PASS')),\n",
     "    verify_certs=False,\n",
     ")"
@@ -106,26 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_1937749/4048237628.py:1: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
-      "  client.indices.create(\n",
-      "/home/reissant/miniforge3/envs/py10/lib/python3.10/site-packages/urllib3/connectionpool.py:1013: InsecureRequestWarning: Unverified HTTPS request is being made to host 'ml-elasticsearch.kcp.bbp.epfl.ch'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'articles'})"
+       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'test_articles'})"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,27 +123,24 @@
    "source": [
     "client.indices.create(\n",
     "    index=\"articles\",\n",
-    "    body={\n",
-    "        \"settings\": {\"number_of_shards\": 2,\n",
-    "                     \"number_of_replicas\": 1},\n",
-    "        \"mappings\": {\n",
-    "            \"dynamic\": \"strict\",\n",
-    "            \"properties\": {\n",
-    "                \"article_id\": {\"type\": \"keyword\"},\n",
-    "                \"doi\": {\"type\": \"keyword\"},\n",
-    "                \"pmc_id\": {\"type\": \"keyword\"},\n",
-    "                \"pubmed_id\": {\"type\": \"keyword\"},\n",
-    "                \"arxiv_id\": {\"type\": \"keyword\"},\n",
-    "                \"title\": {\"type\": \"text\"},\n",
-    "                \"authors\": {\"type\": \"text\"},\n",
-    "                \"abstract\": {\"type\": \"text\"},\n",
-    "                \"journal\": {\"type\": \"keyword\"},\n",
-    "                \"publish_time\": {\"type\": \"date\", \"format\": \"yyyy-MM-dd\"},\n",
-    "                \"license\": {\"type\": \"keyword\"},\n",
-    "                \"is_english\": {\"type\": \"boolean\"},\n",
+    "    settings = {\"number_of_shards\": 2,\n",
+    "                \"number_of_replicas\": 1},\n",
+    "    mappings = {\"dynamic\": \"strict\",\n",
+    "                \"properties\": {\n",
+    "                    \"article_id\": {\"type\": \"keyword\"},\n",
+    "                    \"doi\": {\"type\": \"keyword\"},\n",
+    "                    \"pmc_id\": {\"type\": \"keyword\"},\n",
+    "                    \"pubmed_id\": {\"type\": \"keyword\"},\n",
+    "                    \"arxiv_id\": {\"type\": \"keyword\"},\n",
+    "                    \"title\": {\"type\": \"text\"},\n",
+    "                    \"authors\": {\"type\": \"text\"},\n",
+    "                    \"abstract\": {\"type\": \"text\"},\n",
+    "                    \"journal\": {\"type\": \"keyword\"},\n",
+    "                    \"publish_time\": {\"type\": \"date\", \"format\": \"yyyy-MM-dd\"},\n",
+    "                    \"license\": {\"type\": \"keyword\"},\n",
+    "                    \"is_english\": {\"type\": \"boolean\"},\n",
+    "                }\n",
     "            }\n",
-    "        },\n",
-    "    }\n",
     ")"
    ]
   },
@@ -193,10 +180,9 @@
    "source": [
     "client.indices.create(\n",
     "    index=\"paragraphs\",\n",
-    "    body={\n",
-    "        \"settings\": {\"number_of_shards\": 2,\n",
-    "                     \"number_of_replicas\": 1},\n",
-    "        \"mappings\": {\n",
+    "    settings = {\"number_of_shards\": 2,\n",
+    "                \"number_of_replicas\": 1},\n",
+    "    mappings = {\n",
     "            \"dynamic\": \"strict\",\n",
     "            \"properties\": {\n",
     "                \"article_id\": {\"type\": \"keyword\"},\n",
@@ -211,8 +197,7 @@
     "                    \"similarity\": \"dot_product\"\n",
     "                }\n",
     "            }\n",
-    "        },\n",
-    "    }\n",
+    "        }\n",
     ")"
    ]
   },
@@ -225,24 +210,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/reissant/miniforge3/envs/py10/lib/python3.10/site-packages/urllib3/connectionpool.py:1013: InsecureRequestWarning: Unverified HTTPS request is being made to host 'ml-elasticsearch.kcp.bbp.epfl.ch'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "['articles', 'arxiv_dense', 'paragraphs']"
+       "['articles', 'arxiv_dense', 'arxiv_meta', 'paragraphs', 'test_articles']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
